tests/e2e/snapshots/e2e__tui_tests__status_bar_large_tokens.snap
---
source: tests/e2e/tui_tests.rs
expression: terminal.backend()
---
"rslph                                                  ◆ claude-opus-4-5 | 00:00"
"Iter 1/10 | Task 0/0 | In: 1.2M | Out: 567.9k | CacheW: 123.5k | CacheR: 789.0k "
"────────────────────────────────────────────────────────────────────────────────"
"┌─ Claude (Iteration 1) ───                                                     "
"└─────                                                                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"j/k:scroll  Tab:select  Enter:toggle  {/}:iteration  c:conversation  t:thinking "
