tests/e2e/snapshots/e2e__tui_tests__toggle_pause.snap
---
source: tests/e2e/tui_tests.rs
expression: terminal.backend()
---
"rslph                                             test-project (claude-sonnet-4)"
"Iter 1/5 | Task 0/0 |                             0%                            "
"────────────────────────────────────────────────────────────────────────────────"
"Claude (Iteration 1)                                                            "
"   Claude: Some output message.                                                 "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"j/k:scroll  Tab:select  Enter:toggle  {/}:iteration  p:pause  Ctrl+C:quit       "
