tests/e2e/snapshots/e2e__tui_tests__token_accumulation_across_iterations.snap
---
source: tests/e2e/tui_tests.rs
expression: terminal.backend()
---
"rslph                                             test-project (claude-opus-4-5)"
"Iter 2/10 | Task 1/0 | In: 3.5k | Out: 1.8k | CacheW: 500.0 | CacheR: 1.2k | 0% "
"────────────────────────────────────────────────────────────────────────────────"
"Claude (Iteration 2)                                                            "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"j/k:scroll  Tab:select  Enter:toggle  {/}:iteration  c:conversation  p:pause  Ct"
